colcon_ws/log/build_2025-04-19_10-56-39/hello_ros/stderr.log
  File "/home/park/testpublic/colcon_ws/install/hello_ros/lib/python3.10/site-packages/hello_ros/hello_ros.py", line 11
    print("hello, ROS2 humble!! " {self.count}"")
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

